test/classes/delete-free/bug-375.good
bug-375.chpl:4: In function 'main':
bug-375.chpl:6: error: illegal cast from owned Child to shared Parent
